--- a/index.html
+++ b/index.html
@@ -1,23 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stopwatch</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
+    <link rel="stylesheet" href="styles.css" />
+    <meta name="theme-color" content="#ff6600" />
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+    <link rel="icon" href="icon.png" type="image/png" />
+    <script>
+      if ("serviceWorker" in navigator) {
+        navigator.serviceWorker
+          .register("./service-worker.js")
+          .then((registration) => {
+            console.log(
+              "Service Worker registered with scope:",
+              registration.scope
+            );
+          })
+          .catch((error) => {
+            console.error("Service Worker registration failed:", error);
+          });
+      }
+    </script>
+  </head>
 
-<body>
+  <body>
     <h1>Stopwatch</h1>
-    <div id="timer">0 s</div>
+    <div id="timer">00:00:000</div>
     <div class="button-container">
-        <button id="startButton">Start</button>
-        <button id="stopButton">Stop</button>
-        <button id="clearButton">Clear</button>
+      <button id="startButton">Start</button>
+      <button id="stopButton">Stop</button>
+      <button id="clearButton">Clear</button>
     </div>
 
     <script src="script.js"></script>
-</body>
-
+  </body>
 </html>
